--- a/src/styles/partials/_about.scss
+++ b/src/styles/partials/_about.scss
@@ -6,5 +6,33 @@
 
   li {
     background: #efefef;
+    padding: 2rem 1.5rem;
+  }
+}
+
+.favorite-colors {
+  @extend %flex-list;
+  flex-wrap: wrap;
+
+  li {
+    padding: 1.5rem 2rem;
+
+    &:hover {
+      h4,
+      p {
+        opacity: 1;
+      }
+    }
+  }
+
+  h4 {
+    text-transform: capitalize;
+  }
+
+  h4,
+  p {
+    margin: 0.8rem 0;
+    opacity: 0;
+    transition: opacity 300ms ease;
   }
 }
