--- a/src/styles/partials/_classes.scss
+++ b/src/styles/partials/_classes.scss
@@ -5,3 +5,11 @@
   line-height: 0;
   vertical-align: sub;
 }
+
+@each $key, $val in $colors {
+  .#{$key} {
+    background-color: $val;
+    box-shadow: inset 0 0 15px 0 rgba(darken($val, 10%), 0.5);
+    color: set-text-color($val);
+  }
+}
