Add resume, contact, and basic print styles

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,3 +12,6 @@ Main sass file importing files from styles folder.
 @import "./styles/partials/header";
 @import "./styles/partials/about";
 @import "./styles/partials/classes";
+
+/* Print styles */
+@import "./styles/partials/print";
