--- a/src/styles/modules/_colors.scss
+++ b/src/styles/modules/_colors.scss
@@ -10,6 +10,7 @@ $colors: (
   orange: #fb7d00,
   yellow: #ffc61e,
   green: #97ff7a,
+  teal: #02c6f2,
   blue: #7096ff,
   indigo: #060351,
   violet: #45149b,
