--- a/src/styles/partials/_elements.scss
+++ b/src/styles/partials/_elements.scss
@@ -1,1 +1,15 @@
 /* Basic content level html elements go here */
+body {
+  font-family: $base_font;
+  font-size: calc(10px + 1.5vmin);
+  line-height: 1.4;
+}
+
+a {
+  text-decoration: none;
+
+  &:hover,
+  &:focus {
+    text-decoration: underline;
+  }
+}
