--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -1,20 +1,35 @@
 /* Styles for the app header */
 
 .app-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  align-items: center;
+  background-color: color(pink);
+  color: $light;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  font-size: 120%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: $light;
+  min-height: 100vh;
+  text-align: center;
 
   h1 {
-    margin-bottom: 0;
-    margin-top: auto;
+    font-size: 23vmin;
+    font-weight: 200;
+    line-height: 0.85;
+    margin: auto 0 0.5rem;
+
+    @media (min-width: 320px) {
+      font-family: $fancy_font;
+      font-weight: 400;
+    }
     + p {
-      margin-top: 0.5rem;
+      margin-bottom: 0;
+      @extend %border-above;
+
+      @media (min-width: 768px) {
+        &:before {
+          border-top: 0.45vmin dotted $light;
+        }
+      }
     }
   }
 
@@ -25,21 +40,35 @@
 
 .contact-me {
   @extend %flex-list;
-  font-size: 1.25rem;
+  flex-direction: column;
   margin-bottom: auto;
+  @extend %border-above;
+
+  @media (min-width: 768px) {
+    flex-direction: row;
+    font-size: 80%;
+    margin-top: 0;
+
+    &:before {
+      border: 0 none;
+    }
+  }
 
   li {
-    align-items: center;
-    display: flex;
+    margin: 0 0 0.5rem;
 
-    &:after {
-      content: "\25C8";
-      font-size: 50%;
-      margin: 0 -1.5rem 0 1.5rem;
-    }
+    @media (min-width: 768px) {
+      margin: 0.5rem 0 0;
 
-    &:last-child:after {
-      display: none;
+      &:after {
+        content: "\2022";
+        font-size: 110%;
+        margin: 0 -1rem 0 1rem;
+      }
+
+      &:last-child:after {
+        display: none;
+      }
     }
   }
 }
@@ -51,11 +80,12 @@
     li {
       align-items: center;
       display: flex;
+      margin: 0;
 
       &:after {
         content: "|";
         font-size: 50%;
-        margin: 0 -1.5rem 0 1.5rem;
+        margin: 0 0 0 4vmin;
       }
 
       &:last-child:after {
