--- a/src/styles/partials/_classes.scss
+++ b/src/styles/partials/_classes.scss
@@ -4,6 +4,7 @@
   font-size: 165%;
 
   &.symbol {
+    color: color(pink);
     font-family: $default_font;
     line-height: 0;
     vertical-align: sub;
