--- a/src/styles/partials/_about.scss
+++ b/src/styles/partials/_about.scss
@@ -1,11 +1,35 @@
 /* Styles specific to the about section */
 
+.mission,
+.background {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 650px;
+}
+
+.passions {
+  background-color: rgba($dark, 0.05);
+  margin: 5% -5.55%;
+  padding: 5%;
+
+  h3 {
+    text-align: center;
+  }
+}
+
 .things-I-love {
   @extend %flex-list;
 
   li {
-    background: #efefef;
+    background-color: rgba($dark, 0.05);
     padding: 2rem 1.5rem;
+  }
+}
+
+.fun-fact {
+  h3,
+  p {
+    text-align: center;
   }
 }
 
@@ -13,7 +37,9 @@
   @extend %flex-list;
 
   li {
+    flex-basis: 8%;
     padding: 1.5rem 2rem;
+    width: 50%;
 
     &:hover {
       h4,
