Styles for work section

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,7 @@ Main sass file importing files from styles folder.
 @import "./styles/partials/layout";
 @import "./styles/partials/header";
 @import "./styles/partials/about";
+@import "./styles/partials/work";
 @import "./styles/partials/classes";
 
 /* Print styles */
