--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,7 @@ Main sass file importing files from styles folder.
 @import "./styles/partials/header";
 @import "./styles/partials/about";
 @import "./styles/partials/work";
+@import "./styles/partials/resume";
 @import "./styles/partials/classes";
 
 /* Print styles */
