--- a/src/styles/partials/_elements.scss
+++ b/src/styles/partials/_elements.scss
@@ -27,3 +27,27 @@ img {
   max-width: 100%;
   margin: 1em auto;
 }
+
+button {
+  background-color: color(orange);
+  border: 0 none;
+  border-radius: 2.25rem;
+  @include inset-box-shadow(color(orange));
+  color: $light;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 700;
+  padding: 1.25rem 1.75rem;
+  text-transform: uppercase;
+  transition: all 300ms ease;
+
+  &:hover,
+  &:focus {
+    background-color: color(pink);
+    @include inset-box-shadow(color(pink));
+  }
+}
+
+li {
+  margin-bottom: 0.5em;
+}
