--- a/src/styles/modules/_utility.scss
+++ b/src/styles/modules/_utility.scss
@@ -1,6 +1,13 @@
 /* Extends and mixins go here */
 
 /* Create extendable styles for a flex-styled list, horizontal by default. */
+%narrow-section {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 650px;
+}
+
+/* Create extendable styles for a flex-styled list, horizontal by default. */
 %flex-list {
   display: flex;
   flex-wrap: wrap;
