--- a/src/styles/partials/_work.scss
+++ b/src/styles/partials/_work.scss
@@ -5,9 +5,7 @@
   h2,
   h3,
   p {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 650px;
+    @extend %narrow-section;
   }
 
   a {
