Move contact info to footer

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,7 @@ Main sass file importing files from styles folder.
 @import "./styles/partials/elements";
 @import "./styles/partials/layout";
 @import "./styles/partials/header";
+@import "./styles/partials/footer";
 @import "./styles/partials/about";
 @import "./styles/partials/work";
 @import "./styles/partials/resume";
