--- a/src/styles/modules/_colors.scss
+++ b/src/styles/modules/_colors.scss
@@ -7,7 +7,7 @@ $dark: black;
 $colors: (
   pink: #ff1e65,
   red: #ad0a1a,
-  orange: #fb7d00,
+  orange: #ff850b,
   yellow: #ffc61e,
   green: #97ff7a,
   teal: #02c6f2,
