--- a/src/styles/modules/_utility.scss
+++ b/src/styles/modules/_utility.scss
@@ -27,40 +27,6 @@
   }
 }
 
-/* Create extendable styles for a small border above an element. */
-@mixin border-above($color: $dark) {
-  margin-top: calc(1rem + 3vmin);
-
-  &:before {
-    border-top: 1px solid $color;
-    content: "";
-    display: block;
-    margin: 0 auto calc(1rem + 3vmin);
-    width: 2rem;
-
-    @media (min-width: 768px) {
-      border-top: 0.45vmin dotted $color;
-    }
-  }
-}
-
-/* Create extendable styles for a small border below an element. */
-@mixin border-below($color: $dark) {
-  margin-bottom: calc(1rem + 3vmin);
-
-  &:after {
-    border-top: 1px solid $color;
-    content: "";
-    display: block;
-    margin: calc(1rem + 3vmin) auto 0;
-    width: 2rem;
-
-    @media (min-width: 768px) {
-      border-top: 0.45vmin dotted $color;
-    }
-  }
-}
-
 /* Helper function for colors list */
 @function color($key) {
   @if map-has-key($colors, $key) {
@@ -83,4 +49,16 @@
 /* Clean up box-shadows */
 @mixin inset-box-shadow($color: $dark0) {
   box-shadow: inset 0 0 15px 0 rgba(darken($color, 10%), 0.5);
+}
+
+/* Create extendable styles for a small border above/below an element. */
+@mixin dotted-border($color: $dark, $position: after) {
+  &:#{$position} {
+    border-top: 1vmin dotted $color;
+    content: "";
+    display: block;
+    margin: calc(1rem + 3vmin) auto;
+    opacity: 0.7;
+    width: 5vmin;
+  }
 }
