--- a/src/styles/partials/_elements.scss
+++ b/src/styles/partials/_elements.scss
@@ -1,12 +1,21 @@
 /* Basic content level html elements go here */
 body {
+  background-image: url("images/noise-texture.png");
   font-family: $base_font;
   font-size: calc(10px + 1.5vmin);
   line-height: 1.4;
 }
 
 h2 {
-  @include border-below;
+  @include dotted-border;
+  font-size: 200%;
+  line-height: 1;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+h3 {
+  font-size: 130%;
   text-align: center;
 }
 
