--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -2,11 +2,12 @@
 
 .app-footer {
   background-color: color(indigo);
+  background-image: url("images/noise-texture.png");
   color: $light;
   padding: 5%;
 
   h2 {
-    font-size: 90%;
+    font-size: 130%;
     margin: 0.5rem 0;
     text-transform: uppercase;
 
@@ -32,7 +33,6 @@
 
   @media (min-width: 768px) {
     flex-direction: row;
-    font-size: 80%;
     justify-content: center;
   }
 
