--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -3,33 +3,40 @@
 .app-header {
   align-items: center;
   background-color: color(pink);
+  background-image: url("images/noise-texture.png");
   color: $light;
   display: flex;
   flex-direction: column;
-  font-size: 120%;
+  font-size: 130%;
   justify-content: center;
   min-height: 100vh;
   padding: 0 5%;
   text-align: center;
 
   h1 {
-    font-size: 23vmin;
-    font-weight: 200;
-    line-height: 0.85;
-    margin: auto 0 0.5rem;
+    font-family: $fancy_font;
+    font-size: 26vmin;
+    font-weight: 400;
+    line-height: 0.75;
+    margin: auto 0 1vmin;
+    opacity: 0.7;
+    text-shadow: 0.5vmin 0.5vmin 0.5vmin scale-color(color(pink), $lightness: -40%);
 
-    @media (min-width: 320px) {
-      font-family: $fancy_font;
-      font-weight: 400;
+    @media (max-width: 1129px) {
+      font-size: 32vmin;
+      text-indent: -30vmin;
+      transform: translateX(7vmin);
     }
+
     + p {
-      @include border-above($light);
+      margin-top: 0;
+      @include dotted-border($light, before);
     }
   }
 
   p {
     @extend %narrow-section;
-    max-width: 800px;
+    max-width: 780px;
 
     &:last-of-type {
       margin-bottom: auto;
@@ -49,8 +56,10 @@
 .app-main-nav {
   ul {
     @extend %flex-list;
+    font-variation-settings: 'wght' 700;
     justify-content: center;
     max-width: 300px;
+    text-transform: uppercase;
 
     @media (min-width: 550px) {
       max-width: unset;
@@ -66,7 +75,7 @@
       &:after {
         content: "|";
         font-size: 50%;
-        margin: 0 3vmin;
+        margin: -0.5vmin 3vmin 0;
       }
 
       &:nth-child(2):after,
