Update packages, install detect print

--- a/src/styles/modules/_variables.scss
+++ b/src/styles/modules/_variables.scss
@@ -2,14 +2,14 @@
 
 @font-face {
   font-family: 'Rouge Script';
-  src: url('fonts/Rouge_Script/RougeScript-Regular.woff2') format('woff2');
+  src: url('../../fonts/Rouge_Script/RougeScript-Regular.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Varta';
-  src: url('fonts/Varta/Varta-VariableFont_wght.woff2') format('woff2-variations');
+  src: url('../../fonts/Varta/Varta-VariableFont_wght.woff2') format('woff2-variations');
   font-weight: normal;
   font-style: normal;
 }
