--- a/src/styles/modules/_utility.scss
+++ b/src/styles/modules/_utility.scss
@@ -2,9 +2,11 @@
 
 /* Create extendable styles for a flex-styled list, horizontal by default. */
 %narrow-section {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 650px;
+  @media screen {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 650px;
+  }
 }
 
 /* Create extendable styles for a flex-styled list, horizontal by default. */
