--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -2,35 +2,40 @@
 
 .app-header {
   align-items: center;
-  background-color: color(pink);
-  background-image: url("images/noise-texture.png");
-  color: $light;
   display: flex;
-  flex-direction: column;
-  font-size: 130%;
   justify-content: center;
   min-height: 100vh;
   padding: 0 5%;
   text-align: center;
 
-  h1 {
-    font-family: $fancy_font;
-    font-size: 26vmin;
-    font-weight: 400;
-    line-height: 0.75;
-    margin: auto 0 1vmin;
-    opacity: 0.7;
-    text-shadow: 0.5vmin 0.5vmin 0.5vmin scale-color(color(pink), $lightness: -40%);
+  @media screen {
+    background-color: color(pink);
+    background-image: url("../../images/noise-texture.png");
+    color: $light;
+    flex-direction: column;
+    font-size: 130%;
+  }
 
-    @media (max-width: 1129px) {
+  h1 {
+    @media screen {
+      font-family: $fancy_font;
+      font-size: 26vmin;
+      font-weight: 400;
+      line-height: 0.75;
+      margin: auto 0 1vmin;
+      opacity: 0.7;
+      text-shadow: 0.5vmin 0.5vmin 0.5vmin scale-color(color(pink), $lightness: -40%);
+
+      + p {
+        margin-top: 0;
+        @include dotted-border($light, before);
+      }
+    }
+
+    @media screen and (max-width: 1129px) {
       font-size: 32vmin;
       text-indent: -30vmin;
       transform: translateX(7vmin);
-    }
-
-    + p {
-      margin-top: 0;
-      @include dotted-border($light, before);
     }
   }
 
