--- a/src/styles/partials/_resume.scss
+++ b/src/styles/partials/_resume.scss
@@ -22,7 +22,7 @@
   }
 }
 
-.resume article {
+.resume .job {
   border-top: 3px solid rgba($dark, 0.05);
   margin: 0 -1em;
   padding: 1em;
@@ -32,54 +32,52 @@
     border-top: 0 none;
   }
 
-  &:hover {
-    background-color: rgba($dark, 0.05);
-    border-color: transparent;
+  @media screen {
+    &:hover {
+      background-color: rgba($dark, 0.05);
+      border-color: transparent;
+    }
   }
 
   h3,
   h4,
   h5,
-  .date {
+  &__date {
     margin: 0;
   }
 
-  .full-date {
+  h5,
+  &__date {
+    font-size: 83%;
+  }
+
+  &__date--full {
     display: inline-block;
-    font-size: 70%;
-    font-weight: 700;
   }
 
   @media (min-width: 768px) {
     display: grid;
     grid-template-columns: 34% 62%;
-    grid-template-rows: auto auto 1fr;
+    grid-template-rows: max-content max-content auto max-content auto;
     grid-column-gap: 4%;
 
-    p:not(.date) {
+    &__description {
       grid-column: 2;
       grid-row: 1 / 4;
       margin: 0;
-    }
 
-    .full-date {
-      margin-bottom: 1em;
-    }
-
-    &.matrix {
-      grid-template-rows: max-content max-content auto max-content auto;
-
-      p:not(.date) {
-        grid-column: 2;
-        grid-row: 1 / 4;
-        margin-bottom: 1em;
-
-        ~ p:not(.date) {
-          grid-column: 2;
-          grid-row: 4 / 6;
-          margin-bottom: 0;
-        }
+      &:not(:last-of-type) {
+        margin-bottom: 1.3rem;
       }
+
+      ~ .job__description {
+        grid-column: 2;
+        grid-row: 4 / 6;
+      }
+    }
+
+    &__date--full {
+      margin-bottom: 1em;
     }
   }
 }
