Fix sass color map to prevent color name conversion

--- a/src/styles/modules/_colors.scss
+++ b/src/styles/modules/_colors.scss
@@ -5,16 +5,16 @@ $dark: black;
 
 // Colors
 $colors: (
-  pink: #ff1e65,
-  red: #ad0a1a,
-  orange: #ff850b,
-  yellow: #ffc61e,
-  green: #97ff7a,
-  teal: #02c6f2,
-  blue: #7096ff,
-  indigo: #060351,
-  violet: #45149b,
-  purple: #c19eff
+  'pink': #ff1e65,
+  'red': #ad0a1a,
+  'orange': #ff850b,
+  'yellow': #ffc61e,
+  'green': #97ff7a,
+  'teal': #02c6f2,
+  'blue': #7096ff,
+  'indigo': #060351,
+  'violet': #45149b,
+  'purple': #c19eff
 );
 
 // Export colors list for React
