--- a/src/styles/partials/_elements.scss
+++ b/src/styles/partials/_elements.scss
@@ -23,18 +23,18 @@ h3 {
 }
 
 a {
-  color: color(orange);
+  color: color('orange');
   text-decoration: none;
   transition: all 300ms ease;
 
   &:hover,
   &:focus {
-    color: color(pink);
+    color: color('pink');
     text-decoration: underline;
   }
 
   &:focus {
-    outline-color: color(pink);
+    outline-color: color('pink');
     outline-offset: 0.4rem;
   }
 }
@@ -46,10 +46,10 @@ img {
 }
 
 button {
-  background-color: color(orange);
+  background-color: color('orange');
   border: 0 none;
   border-radius: 2.25rem;
-  @include inset-box-shadow(color(orange));
+  @include inset-box-shadow(color('orange'));
   color: $light;
   cursor: pointer;
   font-size: 1rem;
@@ -60,12 +60,12 @@ button {
 
   &:hover,
   &:focus {
-    background-color: color(pink);
-    @include inset-box-shadow(color(pink));
+    background-color: color('pink');
+    @include inset-box-shadow(color('pink'));
   }
 
   &:focus {
-    outline-color: color(pink);
+    outline-color: color('pink');
     outline-offset: 0.5rem;
   }
 }
