--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -2,7 +2,7 @@
 
 .app-footer {
   @media screen {
-    background-color: color(indigo);
+    background-color: color('indigo');
     background-image: url("../../images/noise-texture.png");
     color: $light;
     padding: 5%;
