--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -11,10 +11,9 @@
   h2 {
     font-size: 130%;
     margin: 0.5rem 0;
-    text-transform: uppercase;
 
     &:after {
-      display: none;
+      border-color: $light;
     }
   }
 
@@ -24,6 +23,35 @@
 
     &:focus {
       outline-color: $light;
+    }
+  }
+
+  @media (min-width: 768px) {
+    align-items: flex-start;
+    display: flex;
+    justify-content: center;
+
+    h2 {
+      display: flex;
+      font-family: $fancy_font;
+      font-size: 350%;
+      font-weight: 400;
+      justify-content: flex-end;
+      margin: 0 5% 0 0;
+      opacity: 0.8;
+      text-shadow: 0.3rem 0.3rem 0.3rem scale-color(color('indigo'), $lightness: -40%);
+      text-transform: none;
+
+      &:after {
+        display: inline-block;
+        margin: 0;
+        transform: rotate(90deg);
+      }
+    }
+
+    h2,
+    .contact-me {
+      margin-top: 0.3rem;
     }
   }
 }
@@ -36,28 +64,8 @@
     flex-direction: column;
   }
 
-  @media print, (min-width: 768px) {
-    align-items: baseline;
-    flex-direction: row;
-    justify-content: center;
-  }
-
   li {
     flex: 0 1 auto;
     margin: 0 0 0.5rem;
-
-    @media print, (min-width: 768px) {
-      margin: 0.5rem 0 0;
-
-      &:after {
-        content: "\2022";
-        font-size: 110%;
-        margin: 0 -1rem 0 1rem;
-      }
-
-      &:last-child:after {
-        display: none;
-      }
-    }
   }
 }
