--- a/src/styles/partials/_work.scss
+++ b/src/styles/partials/_work.scss
@@ -161,5 +161,12 @@
   columns: 20rem;
   font-size: 83%;
   list-style: none;
+  margin-top: -0.6rem;
   padding: 0;
+
+  li {
+    display: block;
+    margin: 0;
+    padding: 0.6rem 0;
+  }
 }
