--- a/src/styles/partials/_print.scss
+++ b/src/styles/partials/_print.scss
@@ -52,6 +52,7 @@
       }
 
       .contact-me {
+        align-items: baseline;
         flex: 0 0 65%;
         font-size: 83%;
         justify-content: flex-start;
@@ -59,6 +60,7 @@
         li {
           align-items: center;
           display: flex;
+          margin: 0.5rem 0 0;
           position: relative;
 
           &:first-of-type {
@@ -67,11 +69,17 @@
 
           &:after {
             color: rgba($dark, 0.7);
+            content: "\2022";
+            display: block;
             font-size: 220%;
             line-height: 0.5;
             margin: 0;
             position: absolute;
             right: -5px;
+          }
+    
+          &:last-child:after {
+            display: none;
           }
         }
 
