--- a/src/styles/modules/_utility.scss
+++ b/src/styles/modules/_utility.scss
@@ -10,6 +10,15 @@
 }
 
 /* Create extendable styles for a flex-styled list, horizontal by default. */
+@mixin wide-section() {
+  @media screen and (min-width: 1400px) {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1260px;
+  }
+}
+
+/* Create extendable styles for a flex-styled list, horizontal by default. */
 %flex-list {
   display: flex;
   flex-wrap: wrap;
