--- a/src/styles/partials/_work.scss
+++ b/src/styles/partials/_work.scss
@@ -28,6 +28,7 @@
   flex-wrap: wrap;
   margin: 1rem -1%;
   padding: 0;
+  @include wide-section;
 
   small {
     display: block;
@@ -115,6 +116,16 @@
       }
     }
 
+    @media screen and (min-width: 1400px) {
+      &:first-of-type {
+        margin-left: 0;
+      }
+
+      &:last-of-type {
+        margin-right: 0;
+      }
+    }
+
     &__name,
     &__description {
       line-height: 1.3;
@@ -163,6 +174,7 @@
   list-style: none;
   margin-top: -0.6rem;
   padding: 0;
+  @include wide-section;
 
   li {
     display: block;
