--- a/src/styles/modules/_utility.scss
+++ b/src/styles/modules/_utility.scss
@@ -58,6 +58,10 @@
 }
 
 /* Clean up box-shadows */
+@mixin box-shadow($color: $dark) {
+  box-shadow: 0 0 15px 0 rgba($color, 0.5);
+}
+
 @mixin inset-box-shadow($color: $dark) {
   box-shadow: inset 0 0 15px 0 rgba(scale-color($color, $lightness: -18%), 0.5);
 }
