--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -4,6 +4,7 @@
   @media screen {
     background-color: color('indigo');
     background-image: url("../../images/noise-texture.png");
+    @include box-shadow;
     color: $light;
     padding: 5%;
   }
