--- a/src/styles/partials/_resume.scss
+++ b/src/styles/partials/_resume.scss
@@ -56,7 +56,7 @@
 
 	@media (min-width: 768px) {
 		display: grid;
-		grid-auto-rows: min-content 1fr;
+		grid-auto-rows: 1.15em auto;
 		grid-template-columns: 34% 62%;
 		grid-template-rows: min-content min-content 1fr;
 		grid-column-gap: 4%;
